--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ol, ul {
+  padding-left: 30px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-bottom: 10px;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.square--winner {
+  box-shadow: inset 0 0 7px rgba(76, 209, 55,1.0);
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+}
+
+.game-info {
+  margin-left: 20px;
+}
+
+.game-info__top-line {
+  display: flex;
+  align-items: center;
+}
+
+.sort-button {
+  margin-left: 20px;
+}
+
+.turn {
+  margin-top: 5px;
+}
+
+.button {
+  width: 100%;
+}
+
+.table {
+  border-collapse: collapse;
+  margin: 5px auto;
+  border: 1px solid black;
+}
+
+.table__cell {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+}
+
+.table__cell:not(:last-child) {
+  border-right: 1px solid black;
+}
+
+.table__row:not(:last-child) .table__cell {
+  border-bottom: 1px solid black;
 }
